--- a/admin/assetsForSideBar/css/styles.css
+++ b/admin/assetsForSideBar/css/styles.css
@@ -7,8 +7,8 @@
   --nav-width: 68px;
 
   /*===== Colors =====*/
-  --first-color: #4723D9;
-  --first-color-light: #AFA5D9;
+  --first-color: orange;
+  --first-color-light: #1d3b57;
   --white-color: #F7F6FB;
   
   /*===== Font and typography =====*/
